--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -14,7 +14,13 @@ spec:
     spec:
       containers:
         - name: client
-          image: stephengrider/client
+          image: shashankbn/client
+          env:
+            - name: STRIPE_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: stripe-secret
+                  key: STRIPE_KEY
 ---
 apiVersion: v1
 kind: Service
