--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -4,11 +4,12 @@ deploy:
   kubectl:
     manifests:
       - ./infra/k8s/*
+      - ./infra/k8s-dev/*
 build:
   local:
     push: false
   artifacts:
-    - image: stephengrider/auth
+    - image: shashankbn/auth
       context: auth
       docker:
         dockerfile: Dockerfile
@@ -16,7 +17,7 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    - image: stephengrider/client
+    - image: shashankbn/client
       context: client
       docker:
         dockerfile: Dockerfile
@@ -24,7 +25,7 @@ build:
         manual:
           - src: '**/*.js'
             dest: .
-    - image: stephengrider/tickets
+    - image: shashankbn/tickets
       context: tickets
       docker:
         dockerfile: Dockerfile
@@ -32,7 +33,7 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    - image: stephengrider/orders
+    - image: shashankbn/orders
       context: orders
       docker:
         dockerfile: Dockerfile
@@ -40,7 +41,7 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    - image: stephengrider/expiration
+    - image: shashankbn/expiration
       context: expiration
       docker:
         dockerfile: Dockerfile
@@ -48,7 +49,7 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
-    - image: stephengrider/payments
+    - image: shashankbn/payments
       context: payments
       docker:
         dockerfile: Dockerfile
